wrote a line called hello

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 
 <body>
+
+    <p>Hello world</p>
     <!-- header section starts-->
     <h3> <em><a herf="#"> Home </a></em></h3>
     <h3><em><a herf ="/about.html"> About </a></em></h3>
