--- a/index.html
+++ b/index.html
@@ -1,42 +1,216 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name=" description" content=" this is a html project" />
-    <title> study with me </title>
-    <link rel=" stylesheet " href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hospital Admin Dashboard</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    body {
+      background-color: #f4f6f9;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    .sidebar {
+      height: 100vh;
+      background-color: #2c3e50;
+      color: white;
+      padding-top: 20px;
+    }
+    .sidebar a {
+      color: white;
+      text-decoration: none;
+      display: block;
+      padding: 10px 20px;
+      margin-bottom: 5px;
+      border-radius: 5px;
+    }
+    .sidebar a:hover {
+      background-color: #34495e;
+    }
+    .card { margin-bottom: 20px; }
+    .dashboard-header { margin-bottom: 20px; }
+    .notifications { max-height: 150px; overflow-y: auto; }
+    .notification-item { padding: 10px; border-bottom: 1px solid #ddd; }
+  </style>
 </head>
-
-
 <body>
+  <div class="container-fluid">
+    <div class="row">
+      <!-- Sidebar -->
+      <div class="col-md-2 sidebar">
+        <h3 class="text-center">HMS Admin</h3>
+        <a href="#">Dashboard</a>
+        <a href="#">Patients</a>
+        <a href="#">Doctors</a>
+        <a href="#">Appointments</a>
+        <a href="#">Reports</a>
+        <a href="#">Settings</a>
+      </div>
 
-    <p>Hello world</p>
-    <!-- header section starts-->
-    <h3> <em><a herf="#"> Home </a></em></h3>
-    <h3><em><a herf ="/about.html"> About </a></em></h3>
-        <h3><em><a herf ="/contact.html"> Contact </a></em></h3>
-           <a herf ="https://meet.google.com/landing" target ="blank"> google</a> 
-    <h1 align="center">
-        <em><strong>
-                <h1> Welcome to my page </h1></em></strong>
-    </h1>
-    <!-- header section ends-->
-    <!-- summry section starts-->
-    <!-- summry section ends-->
-    <!-- job exprience section starts-->
-    <!-- job exprience section ends-->
-    <!-- Education section starts-->
-    <!-- Education section ends-->
-    <!-- skill section starts-->
-    <!-- skill section ends-->
-    <!-- contact section starts-->
-    <!-- contact section ends-->
-    <!-- footer section starts-->
-    <!-- footer section ends-->
+     
+      <div class="col-md-10 p-4">
+        <div class="dashboard-header d-flex justify-content-between align-items-center">
+          <div>
+            <h2>Hospital Performance Dashboard</h2>
+            <p>Overview of hospital analytics and metrics</p>
+          </div>
+          <div class="notifications border rounded p-2 bg-white shadow-sm" style="width: 250px;">
+            <h6>Notifications</h6>
+            <div id="notificationList">
+            
+            </div>
+          </div>
+        </div>
+
+        <!-- Summary Cards -->
+        <div class="row" id="summaryCards">
+          <div class="col-md-3">
+            <div class="card shadow-sm">
+              <div class="card-body">
+                <h5 class="card-title">Total Patients</h5>
+                <h3 id="totalPatients">1245</h3>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card shadow-sm">
+              <div class="card-body">
+                <h5 class="card-title">Appointments Today</h5>
+                <h3 id="appointmentsToday">98</h3>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card shadow-sm">
+              <div class="card-body">
+                <h5 class="card-title">Available Doctors</h5>
+                <h3 id="availableDoctors">24</h3>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card shadow-sm">
+              <div class="card-body">
+                <h5 class="card-title">Pending Reports</h5>
+                <h3 id="pendingReports">12</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Filters -->
+        <div class="row mb-3">
+          <div class="col-md-3">
+            <select id="monthFilter" class="form-select">
+              <option value="all">All Months</option>
+              <option value="Jan">Jan</option>
+              <option value="Feb">Feb</option>
+              <option value="Mar">Mar</option>
+              <option value="Apr">Apr</option>
+              <option value="May">May</option>
+              <option value="Jun">Jun</option>
+            </select>
+          </div>
+        </div>
+
+        <!-- Charts Section -->
+        <div class="row">
+          <div class="col-md-6">
+            <div class="card shadow-sm">
+              <div class="card-body">
+                <h5 class="card-title">Monthly Patient Admission</h5>
+                <canvas id="patientsChart"></canvas>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card shadow-sm">
+              <div class="card-body">
+                <h5 class="card-title">Appointment Status</h5>
+                <canvas id="appointmentsChart"></canvas>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<script>
+  // Generate random updates for demo purposes
+  function randomInt(min, max) {
+    return Math.floor(Math.random() * (max - min + 1)) + min;
+  }
+
+  function updateSummary() {
+    document.getElementById('totalPatients').innerText = randomInt(1200, 1500);
+    document.getElementById('appointmentsToday').innerText = randomInt(80, 120);
+    document.getElementById('availableDoctors').innerText = randomInt(20, 30);
+    document.getElementById('pendingReports').innerText = randomInt(5, 20);
+  }
+
+  function addNotification() {
+    const notifications = [
+      'New appointment scheduled.',
+      'Pending report ready for review.',
+      'Doctor has updated patient record.',
+      'Critical patient admitted!'
+    ];
+    const list = document.getElementById('notificationList');
+    const item = document.createElement('div');
+    item.className = 'notification-item';
+    item.innerText = notifications[randomInt(0, notifications.length - 1)];
+    list.prepend(item);
+    if(list.childNodes.length > 5) list.removeChild(list.lastChild);
+  }
+
+  setInterval(updateSummary, 5000);
+  setInterval(addNotification, 7000);
+
+  // Patients Chart
+  const ctx1 = document.getElementById('patientsChart').getContext('2d');
+  const patientsChart = new Chart(ctx1, {
+    type: 'line',
+    data: {
+      labels: ['Jan','Feb','Mar','Apr','May','Jun'],
+      datasets: [{
+        label: 'Patients',
+        data: [120,150,170,200,180,210],
+        backgroundColor: 'rgba(52, 152, 219, 0.2)',
+        borderColor: 'rgba(52, 152, 219, 1)',
+        borderWidth: 2,
+        fill: true,
+        tension: 0.4
+      }]
+    },
+    options: { responsive:true }
+  });
+
+  // Appointment Chart
+  const ctx2 = document.getElementById('appointmentsChart').getContext('2d');
+  const appointmentsChart = new Chart(ctx2, {
+    type: 'doughnut',
+    data: {
+      labels:['Completed','Pending','Cancelled'],
+      datasets:[{
+        label:'Appointments',
+        data:[65,25,10],
+        backgroundColor:['rgba(46, 204, 113,0.7)','rgba(241,196,15,0.7)','rgba(231,76,60,0.7)'],
+        borderColor:['rgba(46,204,113,1)','rgba(241,196,15,1)','rgba(231,76,60,1)'],
+        borderWidth:1
+      }]
+    },
+    options:{ responsive:true }
+  });
+
+  // Filter charts by month
+  document.getElementById('monthFilter').addEventListener('change', function() {
+    const month = this.value;
+    const newData = [randomInt(100,200),randomInt(100,200),randomInt(100,200),randomInt(100,200),randomInt(100,200),randomInt(100,200)];
+    patientsChart.data.datasets[0].data = newData;
+    patientsChart.update();
+  });
+</script>
 </body>
-
 </html>
